--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body{
     padding-inline: 60px;
-    background-color: #F5F5F5 ;
+    background-color: #759ec4 ;
     box-sizing:content-box;
 
     background-size: cover;
